client/src/theme/styles/components/backend/list/entity/_entity-list-search.scss
.entity-list-search {
  $inputHeight: 2.857em;


  &__keyword-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border: 1px solid $neutral50;
    border-radius: 8px;
  }

  &__search-button {
    @include buttonUnstyled;
    width: 20px;
    height: 20px;
    margin-top: -2px;
    margin-left: 14px;
    color: $neutral50;

    &:focus {
      color: $accentPrimary;
      outline: 0;
    }
  }

  &__text-button {
    @include buttonUnstyled;
    @include utilityPrimary;
    display: none;
    margin-right: 14px;
    font-size: 13px;
    color: $neutral75;
    letter-spacing: 2px;
    transition: color $duration $timing;

    @include respond($break60) {
      display: block;
    }

    &--foregrounded {
      display: block;
      color: $neutral50;
    }

    &:hover {
      color: $accentPrimary;
    }

    &:focus {
      color: $accentPrimaryPale;
      outline: 0;
    }

  }

  &__keyword-input-wrapper {
    display: block;
    flex: 1;
    border-radius: 8px;
  }

  &__keyword-input {
    @include inputQuaternary;
    width: 100%;
    padding-left: 14px;
    border: 0;

    &::placeholder {
      color: $neutral75;
    }

    &:focus::placeholder {
      color: $accentPrimary;
    }

    &:focus {
      outline: none;
    }

  }

  &__options {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin: 0 -11px;

    &--vertical {
      display: block;
      margin: 0;
    }

  }

  &__option {
    flex: 0 0 100%;
    padding: 30px 11px 0;

    &--vertical {
      flex: none;
      padding: 0;

      .entity-list-search__options-label {
        &--empty {
          padding-top: 0;
        }
        padding-top: 30px;
      }
    }

    @include respond($break60) {
      flex: 0 0 33.333%;
    }

  }


  &__options-label {
    @include utilityPrimary;
    display: block;
    margin-bottom: 12px;
    font-size: 12px;
    font-weight: $semibold;
    color: $neutral70;
    letter-spacing: 2px;

    &--empty {
      display: none;
      @include respond($break60) {
        display: block;
      }
    }
  }

  &__select-wrapper {

    position: relative;

    select {
      @include unstyledSelect;
      @include utilityPrimary;
      width: 100%;
      height: $inputHeight;
      padding-right: 32px;
      padding-left: 13px;
      font-size: 16px;
      font-weight: $regular;
      color: $neutral20;
      text-transform: none;
      letter-spacing: normal;
      border: 1px solid $neutral80;
      border-radius: 8px;
      transition: border-color $duration $timing;
    }

    svg {
      position: absolute;
      top: 8px;
      right: 8px;
      width: 22px;
      height: 22px;
      color: $neutral50;
      pointer-events: none;
    }

  }
}

